--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,14 +7,13 @@ html(lang="en")
     title Noom
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", crossorigin="anonymous")
 
-
   body
     main(class="p-3")
       // nickname-view
       div(id="nickname-view" class="container")
         div(class="row")
           div(class="col")
-          div(class="col-6")
+          div(class="col-lg-6 col-sm-10 col-11")
             form(class="form-control p-3")
               h1(class="mb-3") Welcome!!!
               div(class="mb-3")
@@ -24,5 +23,5 @@ html(lang="en")
           div(class="col")
 
     script(src="/socket.io/socket.io.js")
-    script(src="/public/js/app.js")
+    script(src="/public/app.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js", integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz", crossorigin="anonymous")
