--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,23 +8,10 @@ html(lang="en")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", crossorigin="anonymous")
 
   body
-    main(class="p-3")
-      // nickname-view
-      //div(id="nickname-view", class="container")
-      //  div(class="row")
-      //    div(class="col")
-      //    div(class="col-lg-6 col-sm-10 col-11")
-      //      form(class="form-control p-3")
-      //        h1(class="mb-3") Welcome!!!
-      //        div(class="mb-3")
-      //          label(for="nick-input" class="form-label") Enter Your Nickname
-      //          input(id="nick-input", class="form-control", type="text", required="true")
-      //        button(class="btn btn-primary") Submit
-      //    div(class="col")
-      // chat-view
-      div(id="chat-view", class="container")
+    main(class="p-3 vh-100")
+      div(id="chat-view", class="container h-100")
         // offcanvas controls
-        aside(id="drawer-control", class="offcanvas offcanvas-start d-md-none d-block")
+        aside(id="drawer-control", class="offcanvas offcanvas-start d-md-none d-block overflow-auto")
           div(class="offcanvas-header")
             h5(class="offcanvas-title")
             button(type="button" class="btn-close", data-bs-dismiss="offcanvas")
@@ -41,9 +28,8 @@ html(lang="en")
               button(class="list-group-item list-group-item-action") Room B
               button(class="list-group-item list-group-item-action") Room C
               button(class="list-group-item list-group-item-action") Room D
-        div(class="row justify-content-center")
-          div(id="drawer-switch-case", class="d-md-none d-block")
-            button(class="btn btn-primary", type="button", data-bs-toggle="offcanvas", data-bs-target="#drawer-control") Open Settings
+        div(class="row justify-content-center h-100")
+          // wide screen controls
           aside(id="side-control", class="p-3 col-lg-3 col-md-5 d-md-block d-none")
             h2(class="mb-3") Nickname
             form(class="form-control py-3 mb-3")
@@ -58,8 +44,31 @@ html(lang="en")
               button(class="list-group-item list-group-item-action") Room B
               button(class="list-group-item list-group-item-action") Room C
               button(class="list-group-item list-group-item-action") Room D
-          section(id="room-chat", class="p-3 col-md-6 col-11")
+          // chat component
+          section(id="room-chat", class="p-3 col-md-7 col-11 d-flex flex-column mh-100")
             h2(class="mb-3") Room Name
+            div(class="w-100 flex-grow-1 border rounded overflow-auto d-flex flex-column p-3")
+              div(class="my-2")
+                h5 other user
+                p Lorem ipsum dolor sit amet.
+              div(class="my-2 align-self-end text-end")
+                h5 you
+                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+              div(class="my-2")
+                h5 other user
+                p Lorem ipsum dolor sit amet.
+              div(class="my-2 align-self-end text-end")
+                h5 you
+                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+              div(class="my-2")
+                h5 other user
+                p Lorem ipsum dolor sit amet.
+              div(class="my-2 align-self-end text-end")
+                h5 you
+                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+            div(id="drawer-switch-case", class="d-md-none d-block mt-3")
+              button(class="btn btn-primary", type="button", data-bs-toggle="offcanvas", data-bs-target="#drawer-control") Open Settings
+
 
     script(src="/socket.io/socket.io.js")
     script(src="/public/app.js")
