--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,10 +2,10 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible" content="ie=edge")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
     title Noom
-    link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", crossorigin="anonymous")
+    link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", crossorigin="anonymous")
 
   body
     main(class="p-3 vh-100")
@@ -14,12 +14,12 @@ html(lang="en")
         aside(id="drawer-control", class="offcanvas offcanvas-start d-md-none d-block overflow-auto")
           div(class="offcanvas-header")
             h5(class="offcanvas-title")
-            button(type="button" class="btn-close", data-bs-dismiss="offcanvas")
+            button(type="button", class="btn-close", data-bs-dismiss="offcanvas")
           div(class="offcanvas-body")
             h2(class="mb-3") Nickname
             form(class="form-control py-3 mb-4")
               div(class="mb-3")
-                label(for="nick-input-drawer" class="form-label") Enter Your Nickname
+                label(for="nick-input-drawer", class="form-label") Enter Your Nickname
                 input(id="nick-input-drawer", class="form-control", type="text", required="true")
               button(class="btn btn-primary") Submit
             h2(class="mb-3") Rooms
@@ -34,7 +34,7 @@ html(lang="en")
             h2(class="mb-3") Nickname
             form(class="form-control py-3 mb-3")
               div(class="mb-3")
-                label(for="nick-input-side" class="form-label") Enter Your Nickname
+                label(for="nick-input-side", class="form-label") Enter Your Nickname
                 input(id="nick-input-side", class="form-control", type="text", required="true")
               button(class="btn btn-primary") Submit
 
@@ -47,25 +47,31 @@ html(lang="en")
           // chat component
           section(id="room-chat", class="p-3 col-md-7 col-11 d-flex flex-column mh-100")
             h2(class="mb-3") Room Name
-            div(class="w-100 flex-grow-1 border rounded overflow-auto d-flex flex-column p-3")
-              div(class="my-2")
-                h5 other user
-                p Lorem ipsum dolor sit amet.
-              div(class="my-2 align-self-end text-end")
-                h5 you
-                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-              div(class="my-2")
-                h5 other user
-                p Lorem ipsum dolor sit amet.
-              div(class="my-2 align-self-end text-end")
-                h5 you
-                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-              div(class="my-2")
-                h5 other user
-                p Lorem ipsum dolor sit amet.
-              div(class="my-2 align-self-end text-end")
-                h5 you
-                p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+            div(class="mb-3 w-100 flex-grow-1 border rounded d-flex flex-column overflow-auto")
+              div(class="flex-grow-1 d-flex flex-column px-3")
+                div(class="my-2", style="max-width: 75%;")
+                  h5 other user
+                  p Lorem ipsum dolor sit amet.
+                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                  h5 you
+                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                div(class="my-2", style="max-width: 75%;")
+                  h5 other user
+                  p Lorem ipsum dolor sit amet.
+                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                  h5 you
+                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                div(class="my-2", style="max-width: 75%;")
+                  h5 other user
+                  p Lorem ipsum dolor sit amet.
+                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                  h5 you
+                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+            form(class="w-100")
+              div(class="input-group")
+                input(type="text", class="form-control")
+                button(class="btn btn-primary") Send
+
             div(id="drawer-switch-case", class="d-md-none d-block mt-3")
               button(class="btn btn-primary", type="button", data-bs-toggle="offcanvas", data-bs-target="#drawer-control") Open Settings
 
