display sent messages

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -56,24 +56,24 @@ html(lang="en")
             h2(id="chat-room-name-head", class="mb-3") Room Name
             div(class="mb-3 w-100 flex-grow-1 border rounded d-flex flex-column overflow-auto")
               div(id="chat-message-area", class="flex-grow-1 d-flex flex-column px-3")
-                div(class="my-2", style="max-width: 75%;")
-                  h5 other user
-                  p Lorem ipsum dolor sit amet.
-                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                  h5 you
-                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-                div(class="my-2", style="max-width: 75%;")
-                  h5 other user
-                  p Lorem ipsum dolor sit amet.
-                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                  h5 you
-                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-                div(class="my-2", style="max-width: 75%;")
-                  h5 other user
-                  p Lorem ipsum dolor sit amet.
-                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                  h5 you
-                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2", style="max-width: 75%;")
+                //  h5 other user
+                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                //  h5 you
+                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2", style="max-width: 75%;")
+                //  h5 other user
+                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                //  h5 you
+                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2", style="max-width: 75%;")
+                //  h5 other user
+                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
+                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                //  h5 you
+                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
             form(id="send-message-form" class="w-100")
               div(class="input-group")
                 input(type="text", class="form-control")
