--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -55,25 +55,15 @@ html(lang="en")
           section(id="room-chat", class="p-3 col-md-7 col-11 d-flex flex-column mh-100")
             h2(id="chat-room-name-head", class="mb-3") Room Name
             div(class="mb-3 w-100 flex-grow-1 border rounded d-flex flex-column overflow-auto")
-              div(id="chat-message-area", class="flex-grow-1 d-flex flex-column px-3")
-                //div(class="my-2", style="max-width: 75%;")
-                //  h5 other user
-                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
-                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                //  h5 you
-                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-                //div(class="my-2", style="max-width: 75%;")
-                //  h5 other user
-                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
-                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                //  h5 you
-                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
-                //div(class="my-2", style="max-width: 75%;")
-                //  h5 other user
-                //  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
-                //div(class="my-2 align-self-end text-end", style="max-width: 75%;")
-                //  h5 you
-                //  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+              div(id="chat-message-area", class="flex-grow-1 d-flex flex-column px-3 pt-3")
+                div(class="my-2 align-self-start", style="max-width: 75%;")
+                  h5 other user
+                  p(class="rounded bg-secondary-subtle p-2") Lorem ipsum dolor sit amet.
+                div(class="my-2 align-self-end text-end", style="max-width: 75%;")
+                  h5 you
+                  p(class="rounded bg-primary-subtle p-2") Lorem ipsum dolor sit amet.
+                p(class="my-2 p-2 w-75 rounded align-self-center text-center text-bg-info") Someone entered the room
+                p(class="my-2 p-2 w-75 rounded align-self-center text-center text-bg-warning") Someone left the room
             form(id="send-message-form" class="w-100")
               div(class="input-group")
                 input(type="text", class="form-control")
