fill room lists

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -24,10 +24,11 @@ html(lang="en")
               button(class="btn btn-primary") Submit
             h2(class="mb-3") Rooms
             ul(class="room-list list-group mb-3")
-              button(class="list-group-item list-group-item-action") Room A
-              button(class="list-group-item list-group-item-action") Room B
-              button(class="list-group-item list-group-item-action") Room C
-              button(class="list-group-item list-group-item-action") Room D
+              //li(class="list-group-item disabled") No Rooms Yet
+              //button(class="list-group-item list-group-item-action") Room A
+              //button(class="list-group-item list-group-item-action") Room B
+              //button(class="list-group-item list-group-item-action") Room C
+              //button(class="list-group-item list-group-item-action") Room D
             form(class="create-room-form w-100")
               div(class="input-group")
                 input(type="text", class="form-control")
@@ -43,10 +44,10 @@ html(lang="en")
               button(class="btn btn-primary") Submit
             h2(class="mb-3") Rooms
             ul(class="room-list list-group mb-3")
-              button(class="list-group-item list-group-item-action") Room A
-              button(class="list-group-item list-group-item-action") Room B
-              button(class="list-group-item list-group-item-action") Room C
-              button(class="list-group-item list-group-item-action") Room D
+              //button(class="list-group-item list-group-item-action") Room A
+              //button(class="list-group-item list-group-item-action") Room B
+              //button(class="list-group-item list-group-item-action") Room C
+              //button(class="list-group-item list-group-item-action") Room D
             form(class="create-room-form w-100")
               div(class="input-group")
                 input(type="text", class="form-control")
