--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -58,7 +58,9 @@ html(lang="en")
                 button(class="btn btn-primary") Create
           // chat component
           section(id="room-chat", class="p-3 col-md-7 col-11 d-flex flex-column mh-100")
-            h2(id="chat-room-name-head", class="mb-3") Select a room
+            div(class="d-flex justify-content-between align-items-baseline mb-2")
+              h2(id="chat-room-name-head") Select a room
+              button(id="chat-clear-btn", class="btn btn-danger") Clear
             div(class="mb-3 w-100 flex-grow-1 border rounded d-flex flex-column overflow-auto")
               div(id="chat-message-area", class="flex-grow-1 d-flex flex-column px-3 pt-3")
                 //div(class="my-2 align-self-start", style="max-width: 75%;")
